--- a/Tugas_1_Annisa_Cahyawati_Dicoding.ipynb
+++ b/Tugas_1_Annisa_Cahyawati_Dicoding.ipynb
@@ -75,7 +75,7 @@
         "id": "AxhSfSweSeum",
         "outputId": "6fdd237e-eb7d-4b57-cf07-fb69e04c3a68"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -293,7 +293,7 @@
         "id": "6AyRdWAqS5DQ",
         "outputId": "4a169148-8697-49df-d9a8-c923d8d2b54e"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -306,7 +306,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "zjCBk1BI8DC1",
         "colab": {
@@ -390,7 +390,7 @@
         "id": "y0nx2EhhpAk_",
         "outputId": "05e85bc5-8134-41bf-da92-f4b1d69a1a57"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -416,7 +416,7 @@
         "id": "pRrNAZJrqiN6",
         "outputId": "8f1d99e4-80f3-4456-c82c-dc5768f64a13"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -474,7 +474,7 @@
         },
         "outputId": "e16fea6c-7b8e-496e-86e6-921a942c414a"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -601,7 +601,7 @@
         },
         "outputId": "6ade544a-81d7-4209-c1b2-e1f9b62345ac"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -679,8 +679,7 @@
       "source": [
         "**Insight:**\n",
         "- Descriptive statistics show the distribution of data, helping to understand the correlation between the environment and temperature, wind speed and humidity\n",
-        "- Time trends show how PM2.5 and PM10 fluctuate over time, which helps in understanding pollution patterns.\n",
-        "- Seasonal pattern visualization shows how PM2.5 and PM10 concentrations vary each month and can be linked to other weather conditions."
+        "- The analysis below can be categorized as a combination of **Univariate and Multivariate EDA**. In terms of **Univariate EDA** are examining individual variables, such as **PM2.5** and **PM10**, by calculating their monthly averages. This helps in understanding the patterns of each variable over time. On the other hand, the comparison between **PM2.5** and **PM10** in the same plot qualifies as **Multivariate EDA**, as exploring the relationship between the two variables over time. This combined approach allows to gain insights into how each pollutant changes monthly and how their trends may be interconnected."
       ],
       "metadata": {
         "id": "th_Lzl2Fkj9O"
@@ -713,7 +712,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "1swJUdAD8DC2",
         "colab": {
@@ -770,6 +769,7 @@
       "cell_type": "markdown",
       "source": [
         "**INSIGHT**\n",
+        "- Multivariate EDA, since data has more than one variable at the same time, such as the relationship between PM2.5 and temperature (TEMP), humidity (DEWP), and wind speed (WSPM). Scatter plots are being used to understand the correlation and interaction patterns between these variables.\n",
         "- If the data points form a pattern that increases from left to right, then there is a positive correlation between the two variables. If the pattern is decreasing, it indicates a negative correlation. If the points are randomly distributed without a clear pattern, there may be no correlation.\n",
         "- Pay attention to areas where the dots are denser, this indicates the range of values ​​where many observations are concentrated. Areas with few or no dots indicate infrequent values\n",
         "\n"
@@ -823,7 +823,7 @@
         "id": "HxdVPxmQyvlg",
         "outputId": "f275e58c-6e54-4a8f-abf4-fd8c87c96071"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -839,7 +839,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "Go0lCsvO8DC2",
         "colab": {
